# link_garden

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROJECT_NOTES.md  README.md
backend/: app.py  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_seed_admin.py  0003_index_desc.py
backend/scripts/: __init__.py  migrate_from_json.py  seed_admin.py  spot_check.py
backend/src/app/: __init__.py  asgi.py  main.py
backend/src/app/core/: __init__.py  config.py  db.py  errors.py  logging.py  pragmas.py  security.py  types.py
backend/src/app/features/auth/: deps.py  models.py  repo.py  routes.py  schemas.py  service.py
backend/src/app/features/cards/: __init__.py  models.py  repo.py  routes.py  schemas.py  service.py  slug.py
backend/src/app/features/covers/: __init__.py  routes.py  schemas.py  service.py
backend/src/app/features/health/: __init__.py  routes.py
backend/src/app/features/tags/: __init__.py  repo.py  routes.py
backend/src/app/services/: __init__.py  markdown.py
backend/tests/: conftest.py
backend/tests/fixtures/: cards.json  openapi_snapshot.json
backend/tests/fixtures/notes/: first-local-article.md  orphan-draft.md  third-archived-local.md
backend/tests/integration/: test_auth.py  test_cards.py  test_covers.py  test_health.py  test_legacy_redirect.py  test_openapi_snapshot.py  test_tags.py
backend/tests/scripts/: test_migrate_from_json.py
backend/tests/unit/: test_markdown.py  test_security.py  test_slug.py
frontend/: eslint.config.ts  (+9 more)
(+104 files in other folders)
