[project]
name = "linkgarden"
version = "0.1.0"
description = "LinkGarden — a personal blog and technical curation gallery."
requires-python = ">=3.12"
authors = [{ name = "LinkGarden Authors" }]

dependencies = [
  "fastapi~=0.118",
  "pydantic~=2.11",
  "pydantic-settings~=2.6",
  "sqlalchemy[asyncio]~=2.0.36",
  "alembic~=1.14",
  "aiosqlite~=0.20",
  "pyjwt~=2.10",
  "bcrypt~=4.2",
  "markdown-it-py~=3.0",
  "mdit-py-plugins~=0.4",
  "linkify-it-py~=2.0",
  "nh3~=0.2",
  "Pillow~=11.0",
  "structlog~=24.4",
  "uvicorn[standard]~=0.34",
  "gunicorn~=23.0",
  "python-multipart~=0.0.20",
]

[project.optional-dependencies]
postgres = ["asyncpg~=0.30"]

[dependency-groups]
dev = [
  "pytest~=8.3",
  "pytest-asyncio~=0.24",
  "httpx~=0.28",
  "ruff~=0.7",
  "pyright~=1.1",
  "anyio~=4.6",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
filterwarnings = ["error::DeprecationWarning"]
